resolucion tipos simples

--- a/04-tipos/index.html
+++ b/04-tipos/index.html
@@ -8,5 +8,7 @@
   <body>
     <h1>Roll the dice</h1>
     <script src="./rollDice.js"></script>
+    <h1>Roll the dice Caro</h1>
+    <script src="./rollDiceCaro.js"></script>
   </body>
 </html>
