--- a/05-tipos-avanzados/index.html
+++ b/05-tipos-avanzados/index.html
@@ -6,7 +6,10 @@
     <title>Post editor</title>
   </head>
   <body>
-    <h1>Roll the dice</h1>
+    <h1>Post editor - demo</h1>
     <script src="./postEditor.js"></script>
+
+    <h1>Post editor - caro</h1>
+    <script src="./postEditorCaro.js"></script>
   </body>
 </html>
