--- a/06-functions/index.html
+++ b/06-functions/index.html
@@ -9,5 +9,9 @@
     <h1>Random Money generator <span id="moneyText"></span> €</h1>
     <button id="button">Calculate</button>
     <script src="./calculator.js"></script>
+
+    <h1>Random Money generator CARO: <span id="moneyTextCaro"></span> €</h1>
+    <button id="buttonCaro">dale masa!</button>
+    <script src="./calculatorCaro.js"></script>
   </body>
 </html>
