notas y resoluciÃon unidad 7

--- a/07-classes/index.html
+++ b/07-classes/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>BagPack</title>
     <style>
-      #error {
+      .error {
         background: tomato;
         padding: 1rem;
         color: #fff;
@@ -17,7 +17,12 @@
   <body>
     <h1>BagPack Game</h1>
     <button id="saveItem">Pick Item</button>
-    <div id="error"></div>
+    <div id="error" class="error"></div>
     <script src="./bagPack.js"></script>
+
+    <h1>BagPack Game Caro</h1>
+    <button id="saveItemCaro">Pick Item Caro</button>
+    <div id="errorCaro" class="error"></div>
+    <script src="./bagPackCaro.js"></script>
   </body>
 </html>
