--- a/08-optional-chaining-nullable/index.html
+++ b/08-optional-chaining-nullable/index.html
@@ -8,5 +8,6 @@
   <body>
     <h1>Movie App</h1>
     <script src="./movie.js"></script>
+    <script src="./movieCaro.js"></script>
   </body>
 </html>
